adicionando testes unitários de serviços

--- a/src/Taxpayer.Web/AppSettings/appsettings.Development.json
+++ b/src/Taxpayer.Web/AppSettings/appsettings.Development.json
@@ -16,7 +16,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-PBJVQT7\\SQLEXPRESS;Initial Catalog=AuthAngular;Integrated Security=True;"
+    "DefaultConnection": "Data Source=XXXXX;Initial Catalog=AuthAngular;Integrated Security=True;"
   },
   "AppSettings": {
     "Secret": "MEUSEGREDOSUPERSECRETO",
